# AirLAB_toy_project

./: README.md  data_loader.py  model.py  train.py
gt_visual/: CMakeLists.txt  package.xml
gt_visual/scripts/: visualize_pose.py
image_pose_sync/: CMakeLists.txt  package.xml
image_pose_sync/scripts/: image_pose_sync.py
image_publisher/: CMakeLists.txt  package.xml
image_publisher/scripts/: image_pose_publisher.py
pose_prediction/: CMakeLists.txt  package.xml
pose_prediction/scripts/: image_to_pose_predict.py
pose_transformer/: CMakeLists.txt  package.xml
pose_transformer/scripts/: transform_node.py
posenet_test/: CMakeLists.txt  package.xml
posenet_test/scripts/: PoseNet_predictor.py  pose_visualizer.py  posenet_predictor.py
rviz_visualization/: CMakeLists.txt  package.xml
rviz_visualization/launch/: rviz.launch  visualize.rviz
rviz_visualization/scripts/: image_pose_publisher.py  image_to_pose_predict.py
synchronizing/: CMakeLists.txt  package.xml
synchronizing/scripts/: image_pose_synchronizer.py
visualization/: CMakeLists.txt  package.xml
visualization/scripts/: predict_pose.py
실행파일 우선 제작/: PoseNet_predictor.py  Visualization.py  publish_data.py
